--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,7 @@
             %% warn_untyped_record,
             {platform_define, "^(2|3)", recent_otp}]}.
 
-{deps, [{quantile_estimator, "~> 0.2.1"}]}.
+{deps, []}.
 {shell, [{apps, [prometheus]}]}.
 {cover_enabled, true}.
 {cover_export_enabled, true}.
